fixed broken css

--- a/03-components-workshop/workshop/src/app/theme/posts-list/posts-list.component.css
+++ b/03-components-workshop/workshop/src/app/theme/posts-list/posts-list.component.css
@@ -1,7 +1,7 @@
 /* aside  */
 
 aside {
-    width: 62%;
+    width: 90%;
     margin-top: 1em;
     font-size: 0.8em;
 }
