--- a/03-components-workshop/workshop/src/app/theme/themes-list/themes-list.component.css
+++ b/03-components-workshop/workshop/src/app/theme/themes-list/themes-list.component.css
@@ -1,7 +1,7 @@
 /* main  */
 
 main {
-    width: 100%;
+    width: 80%;
 }
 
 /* theme list item */
